--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <header id="nav_bar">
       <div class="logo_class">
-        <a href="home.html"
-          ><img src="imgs\myntra_logo.webp" alt="myntra logo" class="logo"
+        <a href="index.html"
+          ><img src="myntra_logo.webp" alt="myntra logo" class="logo"
         /></a>
       </div>
       <div class="nav-links">
