--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
       </div>
       <div class="activity_bar">
         <span class="profile"
-          ><img src="imgs\icons\person.png" alt="" class="person" /><label
+          ><img src="icons\person.png" alt="" class="person" /><label
             for="profile"
             >Profile</label
           ></span
         >
         <span class="wishlist"
-          ><img src="imgs\icons\heart.png" alt="" class="heart" /><label
+          ><img src="icons\heart.png" alt="" class="heart" /><label
             for="wishlist"
             >Wishlist</label
           ></span
         >
         <span class="bag"
-          ><img src="imgs\icons\handbag.svg" alt="" class="handbag" /><label
+          ><img src="icons\handbag.svg" alt="" class="handbag" /><label
             for="bag"
             >Bag</label
           ></span
@@ -198,58 +198,58 @@
     </header>
 
     <img
-      src="imgs\Myntra_End_of_Reason_Sale_Banner_1.jpg"
+      src="Myntra_End_of_Reason_Sale_Banner_1.jpg"
       alt="banner"
       class="banner"
     />
     <section>
       <h2 class="offers">MEDAL WORTHY BRANDS TO BAG</h2>
       <div class="offer_imgs">
-        <img src="imgs/Offers/1.png" alt="" class="offer_img" />
-        <img src="imgs/Offers/2.png" alt="" class="offer_img" />
-        <img src="imgs/Offers/3.png" alt="" class="offer_img" />
-        <img src="imgs/Offers/4.png" alt="" class="offer_img" />
-        <img src="imgs/Offers/5.png" alt="" class="offer_img" />
-        <img src="imgs/Offers/6.png" alt="" class="offer_img" />
+        <img src="Offers/1.png" alt="" class="offer_img" />
+        <img src="Offers/2.png" alt="" class="offer_img" />
+        <img src="Offers/3.png" alt="" class="offer_img" />
+        <img src="Offers/4.png" alt="" class="offer_img" />
+        <img src="Offers/5.png" alt="" class="offer_img" />
+        <img src="Offers/6.png" alt="" class="offer_img" />
       </div>
       <div class="offer_imgs">
-        <img src="imgs/Offers/7.png" alt="" class="offer_img2" />
-        <img src="imgs/Offers/6.png" alt="" class="offer_img2" />
-        <img src="imgs/Offers/5.png" alt="" class="offer_img2" />
-        <img src="imgs/Offers/1.png" alt="" class="offer_img2" />
-        <img src="imgs/Offers/11.png" alt="" class="offer_img2" />
-        <img src="imgs/Offers/12.png" alt="" class="offer_img2" />
+        <img src="Offers/7.png" alt="" class="offer_img2" />
+        <img src="Offers/6.png" alt="" class="offer_img2" />
+        <img src="Offers/5.png" alt="" class="offer_img2" />
+        <img src="Offers/1.png" alt="" class="offer_img2" />
+        <img src="Offers/11.png" alt="" class="offer_img2" />
+        <img src="Offers/12.png" alt="" class="offer_img2" />
       </div>
     </section>
     <section>
       <h2 class="categories">SHOP BY CATEGORY</h2>
       <div class="category_imgs1">
-        <img src="imgs/categories/1.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/2.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/3.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/4.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/5.jpg" alt="" class="category_img1" />
+        <img src="categories/1.jpg" alt="" class="category_img1" />
+        <img src="categories/2.jpg" alt="" class="category_img1" />
+        <img src="categories/3.jpg" alt="" class="category_img1" />
+        <img src="categories/4.jpg" alt="" class="category_img1" />
+        <img src="categories/5.jpg" alt="" class="category_img1" />
       </div>
       <div class="category_imgs1">
-        <img src="imgs/categories/6.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/7.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/8.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/9.jpg" alt="" class="category_img1" />
-        <img src="imgs/categories/10.jpg" alt="" class="category_img1" />
+        <img src="categories/6.jpg" alt="" class="category_img1" />
+        <img src="categories/7.jpg" alt="" class="category_img1" />
+        <img src="categories/8.jpg" alt="" class="category_img1" />
+        <img src="categories/9.jpg" alt="" class="category_img1" />
+        <img src="categories/10.jpg" alt="" class="category_img1" />
       </div>
       <div class="category_imgs2">
-        <img src="imgs/categories/16.png" alt="" class="category_img2" />
-        <img src="imgs/categories/17.png" alt="" class="category_img2" />
-        <img src="imgs/categories/18.png" alt="" class="category_img2" />
-        <img src="imgs/categories/19.png" alt="" class="category_img2" />
-        <img src="imgs/categories/20.png" alt="" class="category_img2" />
+        <img src="categories/16.png" alt="" class="category_img2" />
+        <img src="categories/17.png" alt="" class="category_img2" />
+        <img src="categories/18.png" alt="" class="category_img2" />
+        <img src="categories/19.png" alt="" class="category_img2" />
+        <img src="categories/20.png" alt="" class="category_img2" />
       </div>
       <div class="category_imgs2">
-        <img src="imgs/categories/11.png" alt="" class="category_img2" />
-        <img src="imgs/categories/12.png" alt="" class="category_img2" />
-        <img src="imgs/categories/13.png" alt="" class="category_img2" />
-        <img src="imgs/categories/14.png" alt="" class="category_img2" />
-        <img src="imgs/categories/15.png" alt="" class="category_img2" />
+        <img src="categories/11.png" alt="" class="category_img2" />
+        <img src="categories/12.png" alt="" class="category_img2" />
+        <img src="categories/13.png" alt="" class="category_img2" />
+        <img src="categories/14.png" alt="" class="category_img2" />
+        <img src="categories/15.png" alt="" class="category_img2" />
       </div>
     </section>
     <footer class="footer">
@@ -283,38 +283,38 @@
       <div class="exp">
         <span class="exp_heading">EXPERIENCE MYNTRA APP ON MOBILE</span>
         <span class="play"
-          ><img src="imgs/icons/ggl play.png" alt="" class="play_img1" /><img
-            src="imgs/icons/app store.png"
+          ><img src="icons/ggl play.png" alt="" class="play_img1" /><img
+            src="icons/app store.png"
             alt=""
             class="play_img"
         /></span>
         <span class="keep_heading">KEEP IN TOUCH</span>
         <span class="keep_imgs"
           ><img
-            src="imgs/icons/square-facebook.svg"
+            src="icons/square-facebook.svg"
             alt=""
             class="keep_img1" /><img
-            src="imgs/icons/square-instagram.svg"
+            src="icons/square-instagram.svg"
             alt=""
             class="keep_img1" /><img
-            src="imgs/icons/twitter.svg"
+            src="icons/twitter.svg"
             alt=""
             class="keep_img1" /><img
-            src="imgs/icons/youtube.svg"
+            src="icons/youtube.svg"
             alt=""
             class="keep_img1"
         /></span>
       </div>
       <div class="gurantee">
         <span class="g"
-          ><img src="imgs/icons/patch-check.svg" alt="" class="gi" />
+          ><img src="icons/patch-check.svg" alt="" class="gi" />
           <div>
             <b class="gh">100% ORIGINAL</b> gurantee for all products at
             myntra.com
           </div></span
         >
         <span class="r"
-          ><img src="imgs/icons/repeat.svg" alt="" class="ri" />
+          ><img src="icons/repeat.svg" alt="" class="ri" />
           <div>
             <b class="rh">Return within 14 days</b> of receiving your order
           </div></span
